# qudsiramiz.github.io

./: .gitattributes  .gitignore  CNAME  LICENSE  README.md  about.html  book_reviews_widget.html  git_update.sh  index.html  lexi-time-series.html  list_of_published_papers.html  reading_challenge_widget.html  recently_read_widget.html  recently_read_widget.xml  research.html  test_doc  version_2.html
assets/css/: main.css
assets/js/: main.js
book_web/: index.html
fbb/: fbb.html
fbb/fbb_files/: 0575b27f05f7.js.download  28cb60cefb22.js.download  3d647311dbdb.css  59214d96cd2c.js.download  B3zsoUFFQkZ  EDCj09Pb8pUjHXIFJS_PfBpELTlNnUOPUqilxM0kJLA.js.download  KSCILWoWS8k.html  css  css(1)  de3aef6493bd.js.download  embed-0c3dd13a55.css  embed-9f3e1ee513.js.download  embed.html  embed.js.download  embed.vendor-302d7b340f.js.download  f526f0d821f7.css  gtm.js.download  js  main-min.js.download  main.css  raygun.min.js.download  reset.css  saved_resource(1).html  saved_resource(2).html  saved_resource(3).html  saved_resource(4).html  saved_resource(5).html  saved_resource.html  scripts.js.download  style(1).css  unslider-min.js.download  widget_iframe.f88235f49a156f8b4cab34c7bc1a0acc.html  (+1 more)
latex/: Qudsi.bib  Qudsi.bib.sav  list_of_publication.tex
python/: pyproject.toml
python/codes/: dscovr_30days_all.py  dxl_dwld_upld_dscovr_30days_automated.py  dxl_mp4_dscovr.py  sw_rt_ts_dwld_upld_dscovr_30days_automated.py  sw_rt_ts_mp4_dscovr.py  test.py
python/tutorials/codes/: array_operations.py  make_collage.py  vector_operations.py
sane/: Aakash Sane.html
(+13 files in other folders)
