[tool.poetry]
name = "rt_sw_ts"
version = "0.1.0"
description = ""
authors = ["Ramiz Qudsi <qudsiramiz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
scipy = "^1.9.0"
pandas = "^1.4.3"
imageio = "^2.21.1"
geopack = "^1.0.9"
matplotlib = "^3.5.2"
imageio-ffmpeg = "^0.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
